여행 전 push
refresh token을 header로 보내도록 수정함
이걸 리액트에서 어떻게 읽을 수 있을지가 고민임 -> httpOnly여서 못
읽을텐데 그럼 다른 방식으로 보내야 하나?